# sc-liquid-staking-rs

./: Cargo.toml  deploy-testnet.interaction.json  erdpy.data-storage.json  upgrade.json
interaction/: testnet.snippets.sh
mandos/: adder.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: adder.rs  callbacks.rs  delegate.rs  events.rs  helpers.rs  main.rs  maintenance.rs  storage.rs  token.rs  tokens.rs
tests/: adder_mandos_constructed_with_calls_test.rs  adder_mandos_constructed_with_results_test.rs  adder_test.rs
wallets/: new-wallet.pem
wasm/: Cargo.toml
wasm/src/: lib.rs
