[package]
name = "sc-liquid-staking-mock"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/adder.rs"

[dependencies.elrond-wasm]
version = "0.36.1"

[dependencies.elrond-wasm-modules]
version = "0.36.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.36.1"
